Revert "Revert virtual refactoring"
This reverts commit 1fa4a3e154b730d3d7949d3cbc74d2bd80ef5c8d.