@@ -542,10 +542,7 @@ public class ZkTestServer {
       }
       Thread parentThread = Thread.currentThread();
       // we don't call super.distribSetUp
-      zooThread = new Thread("ZkTestServer Run Thread"){
-
-      @Override
-      public void run() {
+      zooThread = Thread.ofVirtual().name("ZkTestServer Run Thread").unstarted(() -> {
         ServerConfig config =
                   new ServerConfig() {
 
@@ -569,8 +566,7 @@ public class ZkTestServer {
                 zooError.set(t);
                 parentThread.interrupt();
               }
-        }
-      };
+      });
 
       ObjectReleaseTracker.track(zooThread);
       zooThread.start();
